# asynctasq-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  setup-pre-commit.sh
.github/: copilot-instructions.md
.github/scripts/: merge_local_coverage.py
.github/workflows/: ci.yml  coverage-badge.yml  publish-pypi.yml  publish-testpypi.yml  test-badge.yml
backend/: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml  setup-pre-commit.sh
backend/src/async_task_q_monitor/: __init__.py
backend/src/async_task_q_monitor/api/: dependencies.py  main.py
backend/src/async_task_q_monitor/api/routes/: queues.py  tasks.py  websocket.py  workers.py
backend/src/async_task_q_monitor/models/: __init__.py  task.py
backend/src/async_task_q_monitor/services/: metrics_collector.py  task_service.py
backend/src/async_task_q_monitor/websocket/: __init__.py
backend/tests/integration/websocket/: test_websocket_endpoint.py
backend/tests/unit/api/routes/: test_workers_unit.py
backend/tests/unit/websocket/: test_manager.py  test_metrics_collector.py
frontend/: biome.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  router.tsx  tailwind.css
frontend/src/components/: KeyboardShortcutsModal.tsx  TaskDetailModal.tsx  WorkerDetailModal.tsx
frontend/src/components/__tests__/: KeyboardShortcutsModal.test.tsx  TaskDetailModal.test.tsx  WorkerDetailModal.test.tsx
frontend/src/components/layout/: Header.tsx  RootLayout.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  Select.tsx  Spinner.tsx  TextField.tsx  index.ts
frontend/src/hooks/: index.ts  useDashboard.ts  useDebounce.ts  useKeyboardShortcuts.ts  useSettings.ts  useTasks.ts  useTheme.ts  useWebSocket.ts  useWorkers.ts
frontend/src/hooks/__tests__/: useDashboard.test.tsx  useDebounce.test.ts  useKeyboardShortcuts.test.tsx  useTheme.test.ts  (+4 more)
frontend/src/lib/: api.ts  logger.ts  query.tsx  types.ts
frontend/src/pages/: Dashboard.tsx  Metrics.tsx  Queues.tsx  Settings.tsx  Tasks.tsx  Workers.tsx  index.ts
frontend/src/test/: mocks.ts  setup.ts  test-utils.tsx
src/async_task_q_monitor/: __init__.py  __main__.py  config.py
src/async_task_q_monitor/api/: __init__.py  dependencies.py  main.py
src/async_task_q_monitor/models/: __init__.py  task.py
src/async_task_q_monitor/services/: __init__.py  event_consumer.py  prometheus.py  queue_service.py  worker_service.py
src/async_task_q_monitor/websocket/: broadcaster.py  redis_pubsub.py
src/asynctasq_monitor/: __init__.py  __main__.py
src/asynctasq_monitor/api/: main.py
src/asynctasq_monitor/cli/: tui.py
src/asynctasq_monitor/services/: metrics_collector.py  prometheus.py  task_service.py
src/asynctasq_monitor/tui/: __init__.py  app.py  event_handler.py
src/asynctasq_monitor/websocket/: broadcaster.py  manager.py  redis_pubsub.py
tests/: _helpers.py  conftest.py
tests/infrastructure/: docker-compose.yml
tests/integration/: conftest.py  test_package_init.py
tests/integration/api/: test_dependencies_integration.py  test_main_integration.py
tests/integration/services/: test_prometheus_integration.py  test_queue_service_integration.py  test_task_service_integration.py  test_worker_service_integration.py
tests/integration/websocket/: test_manager_integration.py  test_redis_pubsub_integration.py  test_websocket_endpoint.py
tests/unit/: test_main_entry.py
tests/unit/api/: test_queues.py  test_workers.py
tests/unit/cli/: test_commands.py  test_web_tui_extended.py
tests/unit/services/: __init__.py  test_event_consumer.py
tests/unit/tui/: test_app.py  test_app_extended.py  test_dashboard_screen.py  test_event_handler.py  test_filter_bar.py  test_help_screen.py  test_help_screen_extended.py  test_load_bar.py  test_metric_card.py  test_metric_card_extended.py  test_queues_screen.py  test_snapshots.py  test_task_detail_screen.py  test_task_table.py  test_tasks_screen.py  test_workers_screen.py
tests/unit/websocket/: test_broadcaster.py  test_events.py  test_manager.py  test_metrics_collector.py  test_redis_pubsub.py
(+52 files in other folders)
