# This package is an optional addon to the main `async-task-q` project. It is
# expected to be installed as an extra from the core package (for example
# `uv add async_task_q[monitor]`) so the parent package controls the combined
# installation of core + addons.
[project]
name = "async-task-q-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.122.0", "pydantic>=2.12.5"]

[project.urls]
Homepage = "https://github.com/adamrefaey/async-task-q-monitor"
Repository = "https://github.com/adamrefaey/async-task-q-monitor"
Issues = "https://github.com/adamrefaey/async-task-q-monitor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "async-task-q>=0.0.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "pre-commit>=4.4.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.3.1",
    "httpx>=0.28.1",
    "bandit>=1.9.2",
    "pip-audit>=2.9.0",
    "coverage-badge>=1.1.2",
    "yamllint>=1.37.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"] # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["async_task_q"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# Use strict mode to avoid false positives from auto-detection
# Strict mode requires explicit @pytest.mark.asyncio decorators on async tests
# This prevents RuntimeWarnings from pytest-asyncio auto-detection interfering with mocks
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-s",
    "-v",
    # "--cov=async_task_q",
    # "--cov-branch",
    # "--cov-report=term-missing",
    # "--cov-report=html",
]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
# Filter warnings from unittest.mock.AsyncMock internals
# These warnings occur because AsyncMock creates coroutines internally that aren't always
# awaited during test collection/teardown. This is a known limitation of unittest.mock
# when used with pytest-asyncio, not an issue with our code.
# Reference: https://github.com/python/cpython/issues/95778
# We use strict mode + explicit @pytest.mark.asyncio decorators (best practice),
# but AsyncMock warnings persist due to mock internals.
filterwarnings = [
    # Filter warnings from unittest.mock.AsyncMock internals
    # These are false positives from AsyncMock's internal coroutine handling
    # when used with pytest-asyncio. This is a known limitation, not a code issue.
    # The warnings can appear from various modules (argparse, importlib, etc.) when
    # AsyncMock coroutines are accessed during test collection or teardown.
    "ignore:coroutine.*was never awaited:RuntimeWarning:unittest.mock",
    "ignore:coroutine.*was never awaited:RuntimeWarning:importlib",
    "ignore:coroutine.*was never awaited:RuntimeWarning:tracemalloc",
    "ignore:coroutine.*was never awaited:RuntimeWarning:re",
    "ignore:coroutine.*was never awaited:RuntimeWarning:argparse",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",                  # Exclude ellipsis in abstract methods
    "@abstractmethod",
]
